Rename to Grafana{Dashboard,Datasource} crd
